Permisos en CORS

--- a/Dynamo/appsettings.Development.json
+++ b/Dynamo/appsettings.Development.json
@@ -1,21 +1,19 @@
 {
   "ConnectionStrings": {
-    //BD LOCAL
-    //"DefaultConnection": "server=localhost;port=3306;uid=root;Pwd='yosaes.21y';Initial Catalog=bd_dynamo_local;Convert Zero Datetime=True;Allow User Variables=true;MinimumPoolSize=10;maximumpoolsize=50;",
-    //"DefaultConnection": "server=localhost;port=3306;uid=root;Pwd='yosaes.21y';Initial Catalog=bd_support_pruebas;Convert Zero Datetime=True;Allow User Variables=true;MinimumPoolSize=10;maximumpoolsize=50;"
-    //"DefaultConnection": "server=208.109.20.5;port=3306;uid=user_tools;Pwd='usert00l5';Initial Catalog=bd_tools;Convert Zero Datetime=True;Allow User Variables=true;MinimumPoolSize=10;maximumpoolsize=50;",
+      //BD LOCAL
+//"DefaultConnection": "server=localhost;port=3306;uid=root;Pwd='yosaes.21y';Initial Catalog=bd_dynamo_vac;Convert Zero Datetime=True;Allow User Variables=true;MinimumPoolSize=10;maximumpoolsize=50;"
+      //"DefaultConnection": "server=localhost;port=3306;uid=root;Pwd='yosaes.21y';Initial Catalog=bd_registro_t_dev;Convert Zero Datetime=True;Allow User Variables=true;MinimumPoolSize=10;maximumpoolsize=50;"
+      //"DefaultConnection": "server=208.109.20.5;port=3306;uid=user_tools;Pwd='usert00l5';Initial Catalog=bd_tools;Convert Zero Datetime=True;Allow User Variables=true;MinimumPoolSize=10;maximumpoolsize=50;",
 
-    //BD DESARROLLO
-    //"DefaultConnection": "server=23.229.214.38;port=3306;uid=user_db_dynamo;Pwd=#$%acces_db_dynamo_2o19%$#;Initial Catalog=db_dynamo;Convert Zero Datetime=True;Allow User Variables=true;MinimumPoolSize=10;maximumpoolsize=50;",
-    //"DefaultConnection": "server=208.109.20.5;port=3306;uid=user_auditoria;Pwd=4ud1t0r14;Initial Catalog=bd_registro_t;Convert Zero Datetime=True;Allow User Variables=true;MinimumPoolSize=10;maximumpoolsize=50;"
+        //BD DESARROLLO
 
 
-    //BD PRODUCCIÓN
-    "DefaultConnection": "server=208.109.20.5;port=3306;uid=user_soporte;Pwd=s0p0rt3.;Initial Catalog=bd_support;Convert Zero Datetime=True;Allow User Variables=true;MinimumPoolSize=10;maximumpoolsize=50;"
+        //BD PRODUCCIÓN
+"DefaultConnection": "server=208.109.20.5;port=3306;uid=user_soporte;Pwd=s0p0rt3.;Initial Catalog=bd_support;Convert Zero Datetime=True;Allow User Variables=true;MinimumPoolSize=10;maximumpoolsize=50;"
 
-    //"DefaultConnection": "server=23.229.214.38;port=3306;uid=lacaldas1612;Pwd=lacaldas1612;Initial Catalog=mar05sed_sistema;Convert Zero Datetime=True;Allow User Variables=true;MinimumPoolSize=10;maximumpoolsize=50;"
-    //LOCAL
-    //"DefaultConnection": "server=192.168.174.168;port=3306;uid=lacaldas1612;Pwd=lacaldas1612;Initial Catalog=mar05sed_sistema;Convert Zero Datetime=True;Allow User Variables=true;"
+        //"DefaultConnection": "server=23.229.214.38;port=3306;uid=lacaldas1612;Pwd=lacaldas1612;Initial Catalog=mar05sed_sistema;Convert Zero Datetime=True;Allow User Variables=true;MinimumPoolSize=10;maximumpoolsize=50;"
+        //LOCAL
+        //"DefaultConnection": "server=192.168.174.168;port=3306;uid=lacaldas1612;Pwd=lacaldas1612;Initial Catalog=mar05sed_sistema;Convert Zero Datetime=True;Allow User Variables=true;"
   },
   "Logging": {
     "LogLevel": {
