--- a/Dynamo/appsettings.json
+++ b/Dynamo/appsettings.json
@@ -1,11 +1,11 @@
 ﻿{
   "ConnectionStrings": {
     //BD LOCAL
-    "DefaultConnection": "server=localhost;port=3306;uid=root;Pwd='yosaes.21y';Initial Catalog=db_support;Convert Zero Datetime=True;Allow User Variables=true;MinimumPoolSize=10;maximumpoolsize=50;"
+ //"DefaultConnection": "server=localhost;port=3306;uid=root;Pwd='yosaes.21y';Initial Catalog=db_support;Convert Zero Datetime=True;Allow User Variables=true;MinimumPoolSize=10;maximumpoolsize=50;",
     //BD DESARROLLO
     //"DefaultConnection": "server=208.109.20.5;port=3306;uid=user_auditoria;Pwd=4ud1t0r14;Initial Catalog=bd_registro_t;Convert Zero Datetime=True;Allow User Variables=true;MinimumPoolSize=10;maximumpoolsize=50;"
     //BD PRODUCCIÓN
-    // "DefaultConnection": "server=23.229.214.38;port=3306;uid=lacaldas1612;Pwd=lacaldas1612;Initial Catalog=mar05sed_sistema;Convert Zero Datetime=True;Allow User Variables=true;MinimumPoolSize=10;maximumpoolsize=50;"
+"DefaultConnection": "server=208.109.20.5;port=3306;uid=user_tools;Pwd=usert00l5;Initial Catalog=bd_tools;Convert Zero Datetime=True;Allow User Variables=true;MinimumPoolSize=10;maximumpoolsize=50;"
   },
   "Logging": {
     "LogLevel": {
